--- a/.github/workflows/azure-static-deploy.yaml
+++ b/.github/workflows/azure-static-deploy.yaml
@@ -6,7 +6,7 @@ on:
     - main
   pull_request:
     types: [opened, synchronize, reopened, closed]
-    banches:
+    branches:
       - main
 
 jobs:
